--- a/funcs/images/package.json
+++ b/funcs/images/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "@google-cloud/functions-framework": "^1.1.1",
     "@google-cloud/storage": "^3.0.2",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "sharp": "^0.25.1"
   },
   "scripts": {
     "start": "functions-framework --target=images"
